[package]
name = "kvarn-reference"
version = "0.4.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "An implementation of the Kvarn web server framework."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/kvarn-reference/"
license = "Apache-2.0"
keywords = ["web-server"]
categories = ["web-programming", "web-programming::http-server", "command-line-utilities"]

[dependencies]
kvarn = { path = "../kvarn", default-features = false }
# kvarn = { version = "=0.4.1", default-features = false }
kvarn-extensions = { path = "../kvarn/extensions", features = ["reverse-proxy"] }
# kvarn-extensions = { version = "=0.4.1", features = ["reverse-proxy"] }
kvarn-search = { path = "../kvarn-search" }
# kvarn-search = "0.1"
kvarn-auth = { path = "../kvarn-auth" }
# kvarn-auth = "0.1"
agde-tokio = { path = "../agde/agde-tokio" }
agde = { path = "../agde/agde" }
http = "0.2"
env_logger = "0.9"
tokio = { version = "1.20", features = ["macros"] }
log = "0.4"
futures-util = "0.3"
trust-dns-resolver = { version = "0.20", features = ["dns-over-tls", "dns-over-rustls"] }

[features]
default = ["mt", "https", "interactive", "kvarn/default"]
production = ["mt", "https", "kvarn/all-http", "kvarn/all-compression", "kvarn/graceful-shutdown", "kvarn/websocket"]

# Interactive program
interactive = []

# Run only on port 8080 for HTTP and 8443 for HTTPS instead of 80 and 443 for testing without root access
high_ports = []

mt = []
https = ["kvarn/https"]
