[package]
name = "moella"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "An implementation of the Kvarn web server framework with a convenient config format."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/moella/"
license = "Apache-2.0"
keywords = ["web-server", "kvarn"]
categories = ["web-programming", "web-programming::http-server", "command-line-utilities", "config"]

[[bin]]
name = "moella"
path = "src/bin/main.rs"
required-features = ["bin"]

[lib]

[dependencies]
kvarn = { path = "../kvarn", default-features = false, features = ["full"] }
# kvarn = { version = "=0.4.1", default-features = false, features = ["full"] }
kvarn-extensions = { path = "../kvarn/extensions", features = ["reverse-proxy"] }
# kvarn-extensions = { version = "=0.4.1", features = ["reverse-proxy"] }
kvarn-search = { path = "../kvarn-search" }
# kvarn-search = "0.1"
kvarn-auth = { path = "../kvarn-auth" }
# kvarn-auth = "0.1"
http = "0.2"
tokio = "1.24"
log = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8.0"

env_logger = {version = "0.10", optional = true }
clap = { version = "4.1.4", features = ["cargo"], optional = true }

[features]
default = []
bin = ["env_logger", "clap", "tokio/rt-multi-thread", "tokio/macros"]
