[package]
name = "moella"
# also update "Moella/0.2.0" in src/extension.rs
version = "0.2.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "An implementation of the Kvarn web server framework with a convenient config format."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/moella/"
license = "Apache-2.0"
keywords = ["web-server", "kvarn"]
categories = ["web-programming", "web-programming::http-server", "command-line-utilities", "config"]

[[bin]]
name = "moella"
path = "src/bin/main.rs"
required-features = ["bin"]

[lib]

[dependencies]
kvarn = { path = "../kvarn", default-features = false, features = ["full"], version = "0.6.2" }
kvarn-extensions = { path = "../kvarn/extensions", features = ["reverse-proxy", "certificate"], version = "0.6.2" }
kvarn-search = { path = "../kvarn-search", version = "0.5" }
kvarn-auth = { path = "../kvarn-auth", version = "0.2" }
http = "1.0"
tokio = { version = "1.24", features = ["fs"] }
# tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", optional = true }
tokio-uring = { version = "0.4.0-alpha1", package = "kvarn-tokio-uring", optional = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

env_logger = {version = "0.11", default-features = false, features = ["auto-color"], optional = true }
clap = { version = "4.5", features = ["cargo"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[features]
default = ["uring"]
bin = ["env_logger", "clap", "tokio/rt-multi-thread", "tokio/macros"]
uring = ["kvarn-extensions/uring", "kvarn/uring", "tokio-uring"]

[profile.distribution]
inherits = "release"
strip = true
lto = true
